tests/invalid_nodepend/typeclass_test_3.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module typeclass_test_11.
:- interface.

:- typeclass foo(T) <= (T =< blah(X)) where [].
